--- a/Swift_SweetSugar/Swift_SweetSugar/TestVC/Func测试/FuncTestVC.xib
+++ b/Swift_SweetSugar/Swift_SweetSugar/TestVC/Func测试/FuncTestVC.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -304,10 +304,10 @@
                     </constraints>
                 </stackView>
                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="IFQ-YM-444">
-                    <rect key="frame" x="5" y="317" width="404" height="44"/>
+                    <rect key="frame" x="5" y="317" width="398" height="44"/>
                     <subviews>
-                        <button opaque="NO" tag="41" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qaK-EU-ESP">
-                            <rect key="frame" x="0.0" y="7" width="37" height="30"/>
+                        <button opaque="NO" tag="41" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qaK-EU-ESP">
+                            <rect key="frame" x="0.0" y="7" width="61" height="30"/>
                             <color key="backgroundColor" red="0.2901960784" green="0.56470588239999997" blue="0.8862745098" alpha="1" colorSpace="calibratedRGB"/>
                             <state key="normal" title="41:Crash">
                                 <color key="titleColor" systemColor="systemRedColor"/>
@@ -316,32 +316,32 @@
                                 <action selector="handleClick:" destination="-1" eventType="touchUpInside" id="NCr-He-QYM"/>
                             </connections>
                         </button>
-                        <button opaque="NO" tag="42" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hqo-0Z-2Io">
-                            <rect key="frame" x="42" y="7" width="99" height="30"/>
+                        <button opaque="NO" tag="42" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hqo-0Z-2Io">
+                            <rect key="frame" x="66" y="7" width="69" height="30"/>
                             <color key="backgroundColor" red="1" green="0.40000000000000002" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
-                            <state key="normal" title="42:结构体测试"/>
+                            <state key="normal" title="42:结构体"/>
                             <connections>
                                 <action selector="handleClick:" destination="-1" eventType="touchUpInside" id="eMM-ry-aps"/>
                             </connections>
                         </button>
-                        <button opaque="NO" tag="43" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lNZ-c8-MVp">
-                            <rect key="frame" x="146" y="7" width="61" height="30"/>
+                        <button opaque="NO" tag="43" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lNZ-c8-MVp">
+                            <rect key="frame" x="140" y="7" width="61" height="30"/>
                             <color key="backgroundColor" red="1" green="0.40000000000000002" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
                             <state key="normal" title="43:Block"/>
                             <connections>
                                 <action selector="handleClick:" destination="-1" eventType="touchUpInside" id="0VJ-PH-lim"/>
                             </connections>
                         </button>
-                        <button opaque="NO" tag="44" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bvc-oG-kq4">
-                            <rect key="frame" x="212" y="7" width="89" height="30"/>
+                        <button opaque="NO" tag="44" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bvc-oG-kq4">
+                            <rect key="frame" x="206" y="7" width="89" height="30"/>
                             <color key="backgroundColor" red="1" green="0.40000000000000002" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
                             <state key="normal" title="44_timerFire"/>
                             <connections>
                                 <action selector="handleClick:" destination="-1" eventType="touchUpInside" id="KmF-Tj-5tC"/>
                             </connections>
                         </button>
-                        <button opaque="NO" tag="45" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cdu-re-U3R">
-                            <rect key="frame" x="306" y="7" width="98" height="30"/>
+                        <button opaque="NO" tag="45" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cdu-re-U3R">
+                            <rect key="frame" x="300" y="7" width="98" height="30"/>
                             <color key="backgroundColor" red="1" green="0.40000000000000002" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
                             <state key="normal" title="45_TimerStop"/>
                             <connections>
@@ -356,8 +356,8 @@
                 <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="E8i-0I-Tew">
                     <rect key="frame" x="8" y="369" width="398" height="44"/>
                     <subviews>
-                        <button opaque="NO" tag="46" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NXM-r5-db1">
-                            <rect key="frame" x="0.0" y="7" width="192" height="30"/>
+                        <button opaque="NO" tag="46" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NXM-r5-db1">
+                            <rect key="frame" x="0.0" y="7" width="74" height="30"/>
                             <color key="backgroundColor" red="0.2901960784" green="0.56470588239999997" blue="0.8862745098" alpha="1" colorSpace="calibratedRGB"/>
                             <state key="normal" title="46:OCTest">
                                 <color key="titleColor" systemColor="systemRedColor"/>
@@ -366,26 +366,26 @@
                                 <action selector="handleClick:" destination="-1" eventType="touchUpInside" id="p7L-t9-fiY"/>
                             </connections>
                         </button>
-                        <button opaque="NO" tag="47" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cot-Uc-173">
-                            <rect key="frame" x="197" y="7" width="41" height="30"/>
+                        <button opaque="NO" tag="47" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cot-Uc-173">
+                            <rect key="frame" x="79" y="7" width="41" height="30"/>
                             <color key="backgroundColor" red="1" green="0.40000000000000002" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
                             <state key="normal" title="47:NL"/>
                             <connections>
                                 <action selector="handleClick:" destination="-1" eventType="touchUpInside" id="tq9-Ct-WRn"/>
                             </connections>
                         </button>
-                        <button opaque="NO" tag="43" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sBG-Nr-k77">
-                            <rect key="frame" x="243" y="7" width="61" height="30"/>
+                        <button opaque="NO" tag="48" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sBG-Nr-k77">
+                            <rect key="frame" x="125" y="7" width="54" height="30"/>
                             <color key="backgroundColor" red="1" green="0.40000000000000002" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
-                            <state key="normal" title="43:Block"/>
+                            <state key="normal" title="48:KVO"/>
                             <connections>
                                 <action selector="handleClick:" destination="-1" eventType="touchUpInside" id="K5S-Qo-vBj"/>
                             </connections>
                         </button>
-                        <button opaque="NO" tag="44" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nlu-le-Ay0">
-                            <rect key="frame" x="309" y="7" width="89" height="30"/>
+                        <button opaque="NO" tag="49" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nlu-le-Ay0">
+                            <rect key="frame" x="184" y="7" width="214" height="30"/>
                             <color key="backgroundColor" red="1" green="0.40000000000000002" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
-                            <state key="normal" title="44_timerFire"/>
+                            <state key="normal" title="49_语法"/>
                             <connections>
                                 <action selector="handleClick:" destination="-1" eventType="touchUpInside" id="Hmg-NQ-3ND"/>
                             </connections>
