--- a/Swift_SweetSugar/Swift_SweetSugar/TestVC/Func测试/FuncTestVC.xib
+++ b/Swift_SweetSugar/Swift_SweetSugar/TestVC/Func测试/FuncTestVC.xib
@@ -383,7 +383,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" tag="49" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nlu-le-Ay0">
-                            <rect key="frame" x="184" y="7" width="142" height="30"/>
+                            <rect key="frame" x="184" y="7" width="90" height="30"/>
                             <color key="backgroundColor" red="1" green="0.40000000000000002" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
                             <state key="normal" title="49_语法"/>
                             <connections>
@@ -391,11 +391,19 @@
                             </connections>
                         </button>
                         <button opaque="NO" tag="50" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MaF-N4-JNo">
-                            <rect key="frame" x="331" y="7" width="67" height="30"/>
+                            <rect key="frame" x="279" y="7" width="67" height="30"/>
                             <color key="backgroundColor" red="1" green="0.40000000000000002" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
                             <state key="normal" title="50_String"/>
                             <connections>
                                 <action selector="handleClick:" destination="-1" eventType="touchUpInside" id="MS5-fW-Mfd"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" tag="51" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ulH-M1-5aP">
+                            <rect key="frame" x="351" y="7" width="47" height="30"/>
+                            <color key="backgroundColor" red="1" green="0.40000000000000002" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
+                            <state key="normal" title="51录屏"/>
+                            <connections>
+                                <action selector="handleClick:" destination="-1" eventType="touchUpInside" id="f06-LH-pBp"/>
                             </connections>
                         </button>
                     </subviews>
@@ -403,15 +411,77 @@
                         <constraint firstAttribute="height" constant="44" id="jTe-KB-uqh"/>
                     </constraints>
                 </stackView>
+                <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="25T-u5-u9F">
+                    <rect key="frame" x="8" y="421" width="398" height="44"/>
+                    <subviews>
+                        <button opaque="NO" tag="52" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tOb-ZQ-xEr">
+                            <rect key="frame" x="0.0" y="7" width="84" height="30"/>
+                            <color key="backgroundColor" red="0.2901960784" green="0.56470588239999997" blue="0.8862745098" alpha="1" colorSpace="calibratedRGB"/>
+                            <state key="normal" title="52:系统通知">
+                                <color key="titleColor" systemColor="systemRedColor"/>
+                            </state>
+                            <connections>
+                                <action selector="handleClick:" destination="-1" eventType="touchUpInside" id="hoK-WP-X6p"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" tag="47" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ErL-mY-h8u">
+                            <rect key="frame" x="89" y="7" width="41" height="30"/>
+                            <color key="backgroundColor" red="1" green="0.40000000000000002" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
+                            <state key="normal" title="47:NL"/>
+                            <connections>
+                                <action selector="handleClick:" destination="-1" eventType="touchUpInside" id="gmC-L8-gzD"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" tag="48" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SkN-iY-5HT">
+                            <rect key="frame" x="135" y="7" width="54" height="30"/>
+                            <color key="backgroundColor" red="1" green="0.40000000000000002" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
+                            <state key="normal" title="48:KVO"/>
+                            <connections>
+                                <action selector="handleClick:" destination="-1" eventType="touchUpInside" id="K0f-eb-Aoa"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" tag="49" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MzD-h0-Pv6">
+                            <rect key="frame" x="194" y="7" width="80" height="30"/>
+                            <color key="backgroundColor" red="1" green="0.40000000000000002" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
+                            <state key="normal" title="49_语法"/>
+                            <connections>
+                                <action selector="handleClick:" destination="-1" eventType="touchUpInside" id="dgD-a7-IcY"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" tag="50" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nNX-qh-UEI">
+                            <rect key="frame" x="279" y="7" width="67" height="30"/>
+                            <color key="backgroundColor" red="1" green="0.40000000000000002" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
+                            <state key="normal" title="50_String"/>
+                            <connections>
+                                <action selector="handleClick:" destination="-1" eventType="touchUpInside" id="ejA-Se-FNx"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" tag="51" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kfE-cm-kaw">
+                            <rect key="frame" x="351" y="7" width="47" height="30"/>
+                            <color key="backgroundColor" red="1" green="0.40000000000000002" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
+                            <state key="normal" title="51录屏"/>
+                            <connections>
+                                <action selector="handleClick:" destination="-1" eventType="touchUpInside" id="AUT-G1-bHr"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <constraints>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="Q8a-fT-Mac"/>
+                        <constraint firstAttribute="height" constant="44" id="TEO-RY-DJv"/>
+                    </constraints>
+                </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="25T-u5-u9F" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="8" id="3Ad-xh-w2r"/>
                 <constraint firstItem="1fS-P6-FT2" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="8" id="BfW-w6-YpB"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="vyg-O4-ulE" secondAttribute="trailing" constant="8" id="Kl8-bD-IG2"/>
                 <constraint firstItem="frV-13-JUL" firstAttribute="leading" secondItem="yiv-9e-lLZ" secondAttribute="leading" id="LoS-by-bne"/>
                 <constraint firstItem="yiv-9e-lLZ" firstAttribute="top" secondItem="1fS-P6-FT2" secondAttribute="bottom" constant="8" id="MOw-Wm-zvz"/>
                 <constraint firstAttribute="trailing" secondItem="E8i-0I-Tew" secondAttribute="trailing" constant="8" id="R4C-qo-3ia"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="25T-u5-u9F" secondAttribute="trailing" constant="8" id="S1y-VY-5QR"/>
+                <constraint firstItem="25T-u5-u9F" firstAttribute="top" secondItem="E8i-0I-Tew" secondAttribute="bottom" constant="8" id="YNF-nE-6ql"/>
                 <constraint firstItem="IFQ-YM-444" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="5" id="a9n-PF-Qy3"/>
                 <constraint firstItem="vyg-O4-ulE" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="9" id="aER-CS-LQa"/>
                 <constraint firstItem="yiv-9e-lLZ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="8" id="cCO-51-MWd"/>
