--- a/Swift_SweetSugar/Swift_SweetSugar/TestVC/Collection测试/Cell/MMSingleLabelCollectionViewCell.xib
+++ b/Swift_SweetSugar/Swift_SweetSugar/TestVC/Collection测试/Cell/MMSingleLabelCollectionViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22152" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22127"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,6 +18,9 @@
                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="yww_1" translatesAutoresizingMaskIntoConstraints="NO" id="JtK-ad-ZLG">
+                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GX9-SI-Sff">
                         <rect key="frame" x="12" y="8" width="26" height="34"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -29,7 +32,11 @@
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <color key="backgroundColor" systemColor="systemCyanColor"/>
             <constraints>
+                <constraint firstAttribute="bottom" secondItem="JtK-ad-ZLG" secondAttribute="bottom" id="3g2-Dm-Qca"/>
+                <constraint firstItem="JtK-ad-ZLG" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="4y1-xl-rNh"/>
                 <constraint firstAttribute="trailing" secondItem="GX9-SI-Sff" secondAttribute="trailing" constant="12" id="Gae-xT-dn2"/>
+                <constraint firstItem="JtK-ad-ZLG" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="YBx-Fc-f77"/>
+                <constraint firstAttribute="trailing" secondItem="JtK-ad-ZLG" secondAttribute="trailing" id="eeU-2q-1tP"/>
                 <constraint firstItem="GX9-SI-Sff" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="pYz-gq-Zgm"/>
                 <constraint firstAttribute="bottom" secondItem="GX9-SI-Sff" secondAttribute="bottom" constant="8" id="syo-Me-A5O"/>
                 <constraint firstItem="GX9-SI-Sff" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="12" id="tMD-51-wqK"/>
@@ -41,8 +48,9 @@
         </collectionViewCell>
     </objects>
     <resources>
+        <image name="yww_1" width="3000" height="4498"/>
         <systemColor name="systemCyanColor">
-            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.1960784314" green="0.67843137249999996" blue="0.90196078430000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
